--- a/src/app/team/add-team-member-modal/add-team-member-modal.component.css
+++ b/src/app/team/add-team-member-modal/add-team-member-modal.component.css
@@ -81,10 +81,10 @@
     margin-bottom: 0;
     margin-top: 3%;
   }
-  .overview-wrapper .general-info-form {
+  .overview-wrapper .team-member-info-form {
     padding: 1% 3%;
   }
-  .overview-wrapper .general-info-form .form-row-label {
+  .overview-wrapper .team-member-info-form .form-row-label {
     color: #2d2d2dff;
     font-size: 10px;
   }
@@ -137,6 +137,7 @@
       padding: 0;
       padding-left: 5%;
       font-family: 'Montserrat', sans-serif;
+      display: inline-block;
   }
 
   .choose-role{
