--- a/src/app/team/update-team-member-modal/update-team-member-modal.component.html
+++ b/src/app/team/update-team-member-modal/update-team-member-modal.component.html
@@ -13,27 +13,27 @@
 <form #updateTeamMemberForm="ngForm" (ngSubmit)="saveMemberAndClose(updateTeamMemberForm)">
   <div class="overview-wrapper">
     <div class="center-div">
-      <div class="general-info-form">
+      <div class="team-member-info-form">
         <div class="row">
           <div class="col-sm-6">
             <div class="form-group">
               <span class="input-form-icon"><i class="fa fa-address-book-o"></i></span>
-              <input type="text" class="form-control dialog-input" ngModel required minlength="3" name="firstName"
+              <input type="text" class="form-control dialog-input" ngModel required minlength="3" maxlength="255" name="firstName"
                 id="firstName" placeholder="First Name">
               <mat-error *ngIf="updateTeamMemberForm.controls['firstName']?.errors?.required 
                                    || updateTeamMemberForm.controls['firstName']?.errors?.minlength">
-                <span class="error-message">*First Name is required</span>
+                <span class="error-message">*First Name is required( min 3 characters)</span>
               </mat-error>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="form-group">
               <span class="input-form-icon"><i class="fa fa-address-book-o"></i></span>
-              <input type="text" class="form-control dialog-input" ngModel required minlength="3" name="lastName"
+              <input type="text" class="form-control dialog-input" ngModel required minlength="3" maxlength="255" name="lastName"
                 id="lastName" placeholder="Last Name">
               <mat-error *ngIf="updateTeamMemberForm.controls['lastName']?.errors?.required 
                 || updateTeamMemberForm.controls['lastName']?.errors?.minlength">
-                <span class="error-message">*Last Name is required</span>
+                <span class="error-message">*Last Name is required( min 3 characters )</span>
               </mat-error>
             </div>
           </div>
@@ -42,17 +42,19 @@
           <div class="col-sm-6">
             <div class="form-group">
               <span class="input-form-icon"><i class="fa fa-phone"></i></span>
-              <input type="text" class="form-control dialog-input" ngModel required name="phoneNumber" id="phoneNumber"
+              <input type="text" class="form-control dialog-input" ngModel required name="phoneNumber" minlength="8" 
+                maxlength="15" id="phoneNumber"
                 placeholder="Phone">
-              <mat-error *ngIf="updateTeamMemberForm.controls['phoneNumber']?.errors?.required">
-                <span class="error-message">*Phone Number is required</span>
+              <mat-error *ngIf="updateTeamMemberForm.controls['phoneNumber']?.errors?.required 
+              || updateTeamMemberForm.controls['phoneNumber']?.errors?.minlength">
+                <span class="error-message">*Phone Number is required ( min 8 characters)</span>
               </mat-error>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="form-group">
               <span class="input-form-icon"><i class="fa fa-envelope-o"></i></span>
-              <input type="text" class="form-control dialog-input" ngModel required email name="emailId" id="emailId"
+              <input type="text" class="form-control dialog-input" ngModel required maxlength="50" email name="emailId" id="emailId"
                 placeholder="Email ID">
               <mat-error *ngIf="updateTeamMemberForm.controls['emailId']?.errors?.required 
                 || updateTeamMemberForm.controls['emailId']?.errors?.email">
