phone number pattern addition

--- a/src/app/team/add-team-member-modal/add-team-member-modal.component.html
+++ b/src/app/team/add-team-member-modal/add-team-member-modal.component.html
@@ -43,11 +43,12 @@
             <div class="form-group">
               <span class="input-form-icon"><i class="fa fa-phone"></i></span>
               <input type="text" class="form-control dialog-input" ngModel required name="phoneNumber" minlength="8" 
-                maxlength="15" id="phoneNumber"
-                placeholder="Phone">
+              maxlength="15" id="phoneNumber" pattern="^(\+|[0-9])\d*"
+              placeholder="Phone">
               <mat-error *ngIf="addTeamMemberForm.controls['phoneNumber']?.errors?.required 
-              || addTeamMemberForm.controls['phoneNumber']?.errors?.minlength">
-                <span class="error-message">*Phone Number is required ( min 8 characters)</span>
+              || addTeamMemberForm.controls['phoneNumber']?.errors?.minlength
+              || addTeamMemberForm.controls['phoneNumber']?.errors?.pattern">
+                <span class="error-message">*Phone Number is not valid</span>
               </mat-error>
             </div>
           </div>
